// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should be able to clone the style and classname into the child element ignoring all other props 1`] = `
<div>
  <span
    class="rmd-grid"
    data-testid="span"
    style="--rmd-grid-cols: 3;"
  >
    Content
  </span>
</div>
`;

exports[`Grid should be able to wrap each child in the GridCell component when the clone prop is enabled 1`] = `
<div>
  <div
    class="rmd-grid"
  >
    <div
      class="rmd-grid__cell"
      data-testid="div"
    />
    <section
      class="rmd-grid__cell"
      data-testid="section"
    />
  </div>
</div>
`;

exports[`Grid should render correctly when the columns props are provided 1`] = `
<div>
  <div
    class="rmd-grid"
    style="--rmd-grid-cols: 2;"
  />
</div>
`;

exports[`Grid should render correctly when the columns props are provided 2`] = `
<div>
  <div
    class="rmd-grid"
    style="--rmd-grid-cols: 4;"
  />
</div>
`;

exports[`Grid should render correctly with the GridCell component 1`] = `
<div>
  <div
    class="rmd-grid"
  >
    <div
      class="rmd-grid__cell"
    >
      Cell 1
    </div>
    <div
      class="rmd-grid__cell"
    >
      Cell 2
    </div>
    <div
      class="rmd-grid__cell"
    >
      Cell 3
    </div>
  </div>
</div>
`;
